[package]
name = "nanogenmo2016"
version = "0.3.0"
authors = ["Mark Sta Ana <booyaabooyaabooyaa@gmail.com>"]
description = "My NaNoGenMo 2016 entry"
repository = "https://github.com/booyaa/nanogenmo2016"
readme = "README.md"
keywords = ["nanogenmo","procgen"]
license = "Apache-2.0"

[dependencies]
numeral = "^0.1"
rand = "0.3"